--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/task_list"
+        android:layout_width="409dp"
+        android:layout_height="612dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_task_button" />
 
     <Button
         android:id="@+id/add_task_button"
-        android:layout_width="192dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="541dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="141dp"
-        android:text="+ Add Task"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="54dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="318dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="12dp"
+        android:text="+"
+        app:layout_constraintBottom_toTopOf="@+id/task_list"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.449"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
