--- a/app/src/main/res/layout/fragment_dialog_create_card.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_card.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:inputType="text"
         android:text="Task name"
+        android:imeOptions="actionDone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
