--- a/app/src/main/res/layout/fragment_dialog_create_card.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <EditText
         android:id="@+id/task_input"
@@ -12,11 +12,11 @@
         android:layout_marginStart="17dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="185dp"
-        android:layout_marginBottom="651dp"
+        android:layout_marginBottom="32dp"
         android:ems="10"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:text="Task name"
-        android:imeOptions="actionDone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
