--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -22,14 +22,15 @@
         android:id="@+id/add_task_button"
         android:layout_width="54dp"
         android:layout_height="48dp"
-        android:layout_marginStart="318dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="39dp"
         android:layout_marginBottom="12dp"
         android:text="+"
         app:layout_constraintBottom_toTopOf="@+id/task_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/task_list"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/task_list"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
