--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -18,23 +18,23 @@
         app:layout_constraintTop_toBottomOf="@+id/add_task_button"
         tools:listitem="@layout/list_task_item" />
 
-    <ImageButton
-        android:layout_width="53dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="25dp"
-        android:backgroundTint="#FFFFFF"
-        android:contentDescription="A tiny Android icon"
-        android:src="@drawable/ic_dropdown_arrow"
-        app:layout_constraintBottom_toTopOf="@+id/task_list"
-        app:layout_constraintEnd_toStartOf="@+id/add_task_button"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toStartOf="@id/task_list"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1"
-        app:tint="#4359CC" />
+<!--    <ImageButton-->
+<!--        android:layout_width="53dp"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:layout_marginBottom="25dp"-->
+<!--        android:backgroundTint="#FFFFFF"-->
+<!--        android:contentDescription="A tiny Android icon"-->
+<!--        android:src="@drawable/ic_dropdown_arrow"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/task_list"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/add_task_button"-->
+<!--        app:layout_constraintHorizontal_bias="1"-->
+<!--        app:layout_constraintStart_toStartOf="@id/task_list"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="1"-->
+<!--        app:tint="#4359CC" />-->
 
     <Button
         android:id="@+id/add_task_button"
@@ -42,7 +42,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
         android:text="+"
         app:layout_constraintBottom_toTopOf="@+id/task_list"
