--- a/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
+++ b/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
@@ -6,14 +6,56 @@
     android:layout_height="wrap_content"
     android:minHeight="350dp">
 
+    <RadioGroup
+        android:id="@+id/recurrence_options"
+        android:layout_width="233dp"
+        android:layout_height="264dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="161dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recurring_input">
+
+        <RadioButton
+            android:id="@+id/one_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="one-time" />
+
+        <RadioButton
+            android:id="@+id/daily"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="daily" />
+
+        <RadioButton
+            android:id="@+id/weekly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="weekly" />
+
+        <RadioButton
+            android:id="@+id/monthly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="monthly" />
+
+        <RadioButton
+            android:id="@+id/yearly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="yearly" />
+    </RadioGroup>
+
+
     <EditText
         android:id="@+id/recurring_input"
         android:layout_width="228dp"
         android:layout_height="53dp"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="35dp"
         android:layout_marginEnd="185dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="297dp"
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="text"
@@ -21,48 +63,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.083" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <RadioGroup-->
-<!--        android:layout_width="233dp"-->
-<!--        android:layout_height="264dp"-->
-<!--        android:layout_marginStart="17dp"-->
-<!--        android:layout_marginEnd="161dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/recurring_input">-->
 
-<!--        <RadioButton-->
-<!--            android:id="@+id/one_time"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="one-time" />-->
-
-<!--        <RadioButton-->
-<!--            android:id="@+id/daily"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="daily" />-->
-
-<!--        <RadioButton-->
-<!--            android:id="@+id/weekly"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="weekly" />-->
-
-<!--        <RadioButton-->
-<!--            android:id="@+id/monthly"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="monthly" />-->
-
-<!--        <RadioButton-->
-<!--            android:id="@+id/yearly"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="yearly" />-->
-<!--    </RadioGroup>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
