--- a/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
+++ b/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
@@ -6,11 +6,26 @@
     android:layout_height="wrap_content"
     android:minHeight="350dp">
 
+    <Button
+        android:id="@+id/save_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="302dp"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/recurring_input"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RadioGroup
         android:id="@+id/recurrence_options"
         android:layout_width="233dp"
         android:layout_height="264dp"
         android:layout_marginStart="17dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="161dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +69,7 @@
         android:layout_width="228dp"
         android:layout_height="53dp"
         android:layout_marginStart="17dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="185dp"
         android:layout_marginBottom="297dp"
         android:ems="10"
