--- a/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
+++ b/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
@@ -8,23 +8,25 @@
 
     <Button
         android:id="@+id/save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_width="73dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="31dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="302dp"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/recurring_input"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <RadioGroup
         android:id="@+id/recurrence_options"
-        android:layout_width="233dp"
-        android:layout_height="264dp"
-        android:layout_marginStart="17dp"
+        android:layout_width="205dp"
+        android:layout_height="265dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="161dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,8 +81,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
