--- a/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
+++ b/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="350dp">
+    android:minHeight="450dp">
+
 
     <Button
         android:id="@+id/save_button"
@@ -17,10 +18,10 @@
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toEndOf="@+id/recurring_input"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.292" />
 
     <RadioGroup
         android:id="@+id/recurrence_options"
@@ -32,7 +33,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recurring_input">
+        app:layout_constraintTop_toBottomOf="@+id/recurring_input"
+        app:layout_constraintVertical_bias="0.06">
 
         <RadioButton
             android:id="@+id/one_time"
@@ -65,7 +67,6 @@
             android:text="yearly" />
     </RadioGroup>
 
-
     <EditText
         android:id="@+id/recurring_input"
         android:layout_width="228dp"
@@ -83,6 +84,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/recurrence_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="161dp"
+        android:ems="10"
+        android:inputType="date"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recurrence_options"
+        app:layout_constraintVertical_bias="1.0"
+        android:text="03/11/2023"/>
+
+    <TextView
+        android:id="@+id/starting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:text="...starting:"
+        app:layout_constraintBottom_toBottomOf="@+id/recurrence_options"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recurrence_field"
+        app:layout_constraintVertical_bias="0.476" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
