--- a/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
+++ b/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
@@ -12,9 +12,9 @@
         android:layout_width="73dp"
         android:layout_height="41dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="302dp"
+        android:layout_marginBottom="351dp"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,6 +22,63 @@
         app:layout_constraintStart_toEndOf="@+id/recurring_input"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.292" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/recurring_input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- Add your four circular buttons here -->
+        <!-- Example button -->
+        <TextView
+            android:id="@+id/homeButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/homecircle"
+            android:gravity="center"
+            android:text="H" />
+
+        <TextView
+            android:id="@+id/workButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/workcircle"
+            android:gravity="center"
+            android:text="W" />
+
+        <TextView
+            android:id="@+id/schoolButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/schoolcircle"
+            android:gravity="center"
+            android:text="S" />
+
+
+        <TextView
+            android:id="@+id/errandButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/errandcircle"
+            android:gravity="center"
+            android:text="E" />
+
+        <!-- Add other buttons similarly -->
+
+
+    </LinearLayout>
 
     <RadioGroup
         android:id="@+id/recurrence_options"
@@ -72,9 +129,9 @@
         android:layout_width="228dp"
         android:layout_height="53dp"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="185dp"
-        android:layout_marginBottom="297dp"
+        android:layout_marginBottom="351dp"
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="text"
