--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,13 @@
 
     <ImageButton
         android:id="@+id/menu_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="90dp"
         android:layout_marginBottom="600dp"
-        android:background="@drawable/menu_bar"
+        android:src="@drawable/menu_bar"
         android:onClick="popupMenu"
+        android:background="@color/transparent"
         app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView"
         app:layout_constraintEnd_toEndOf="@+id/fragmentContainerView"
         app:layout_constraintStart_toEndOf="@+id/fromspin"
