--- a/app/src/main/res/layout/focusmode_dialog.xml
+++ b/app/src/main/res/layout/focusmode_dialog.xml
@@ -7,13 +7,15 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center"
+        android:background="@color/dirty_white">
 
         <!-- Add your four circular buttons here -->
         <!-- Example button -->
