--- a/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
+++ b/app/src/main/res/layout/fragment_dialog_recurring_menu.xml
@@ -97,8 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recurrence_options"
-        app:layout_constraintVertical_bias="1.0"
-        android:text="03/11/2023"/>
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/starting"
